# Credit-Card-Fraud-Detection

./: .gitignore  CC_EDA.ipynb  README.md  evaluation.ipynb  main.py  mlflow_fraud.db  preprocess.ipynb  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
mlruns/1/models/m-1375070ca880457fba06927fe253cdd4/artifacts/: MLmodel  model.skops
mlruns/1/models/m-3e17afcaf4f449639eb06241cf080b0c/artifacts/: MLmodel  model.skops
mlruns/1/models/m-3f876935665049089a408d04c8bb59e7/artifacts/: MLmodel  model.skops
mlruns/1/models/m-86bdd9ca40a84981b72223685c1701bf/artifacts/: MLmodel  model.skops  python_env.yaml
mlruns/1/models/m-d3dad814f65e450fb256718fe418b8b8/artifacts/: MLmodel  input_example.json  model.skops
mlruns/1/models/m-e647dc58adb44d66a83123f59f77d2da/artifacts/: MLmodel
mlruns/1/models/m-eb510b2790eb47a8b7051ab7fe7107d3/artifacts/: MLmodel  model.skops  serving_input_example.json
mlruns/1/models/m-fed91f1ba36e491dbef81a191e26a35e/artifacts/: MLmodel  conda.yaml  model.skops  requirements.txt
