[project]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "openai>=2.45.0",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]
